--- a/arrayMethod.html
+++ b/arrayMethod.html
@@ -37,6 +37,33 @@
         document.write(arr_1, "<br>");
         console.log(arr_1);
 
+        arr_1.push("신촌"); // 배열의 마지막에 요소 추가, 원본이 변경됨
+        document.write(arr_1, "<br>");
+        console.log(arr_1);
+
+        arr_1.unshift("종로"); // 배열의 처음에 요소 추가, 원본이 변경됨
+        document.write(arr_1, "<br>");  
+        console.log(arr_1);
+
+        arr_1.shift(); // 배열의 처음 요소 제거, 원본이 변경됨 -> 종로가 제거됨
+        document.write(arr_1, "<br>");  
+        console.log(arr_1);
+
+        document.write(arr_1.length, "<br>");
+        console.log(arr_1.length); // 배열의 길이
+
+        arr_1.splice(1,2); // 인덱스 1부터 2개 요소 제거, 원본이 변경됨 -> 고대, 방배가 제거됨
+        document.write(arr_1, "<br>");
+        console.log(arr_1);
+
+        arr_2.splice(1,0, "용산","마포"); // 인덱스 1부터 0개 요소 제거하고 "용산", "마포" 추가, 원본이 변경됨
+        document.write(arr_2, "<br>");
+        console.log(arr_2); 
+
+        arr_2.splice(1,1, "합정"); // 인덱스 1부터 1개 요소 제거하고 "합정" 추가, 원본이 변경됨 -> 용산이 제거되고 합정이 추가됨
+        document.write(arr_2, "<br>"); 
+        console.log(arr_2);
+
     </script>
 </body>
 </html>
