slideUp / fadeIn / toggleSide / fadeTo / fadeTo

--- a/ch9/jquery_effect_1_test.html
+++ b/ch9/jquery_effect_1_test.html
@@ -3,9 +3,34 @@
 <head>
 <meta charset="UTF-8">
 <title> 효과와 애니메이션 </title>  
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function( ) {
+	$(".btn1").on("click", function() {
+		$(".box").slideUp(1*1000, "linear", function() { // (시간(ms), 유형)
+			$(".btn1").hide();
+			$(".btn2").show();
+		}); 
+	});
+
+	$(".btn2").on("click", function() {
+		$(".box").fadeIn(1*1000, "swing", function() { // swing -> 시작과 끝은 느리고, 중간은 빠름
+			$(".btn2").hide();
+			$(".btn1").show();
+		}); 
+	});
+
+	$(".btn3").on("click", function() {
+		$(".box").slideToggle(1*1000, "linear");
+	});
+
+	$(".btn4").on("click", function() {
+		$(".box").fadeTo("fast", 0.3); // slow normal fast, 0 ~ 1
+	});
+
+	$(".btn5").on("click", function() {
+		$(".box").fadeTo("fast", 1); // slow normal fast, 0 ~ 1
+	});
 
 });
 </script>
