--- a/ch9/jquery_effect_2_test.html
+++ b/ch9/jquery_effect_2_test.html
@@ -3,9 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <title> 효과와 애니메이션 </title>  
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function(){
+	$(".btn1").on("click", function() {
+		$(".txt1").animate({
+			fontSize : "30px",
+			marginLeft : "500px"
+		}, 2*1000 , "linear", function() {
+			alert("모션완료");
+		});
+	});
+
+	$(".btn2").on("click", function() {
+		$(".txt2").animate({
+			marginLeft : "+=50px"
+		}, 1*1000);
+	});
 
 });
 </script>
