--- a/ch9/jquery_effect_3_test.html
+++ b/ch9/jquery_effect_3_test.html
@@ -3,10 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <title> 효과와 애니메이션 </title>  
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function(){
+	$(".txt1").animate({marginLeft : "300px"});
 
+	$(".txt2").delay(3*1000).animate({marginLeft : "300px"});
+
+	$(".btn1").on("click", moveElement);
+
+	function moveElement() {
+		$(".txt3").animate({marginLeft:"+=50px"},0.8*1000);
+
+		$(".txt4").animate({marginLeft:"+=50px"},0.8*1000);
+		$(".txt4").stop(); // 애니메이션 정지 -> 강제 종료
+
+		$(".txt5").animate({marginLeft:"+=50px"},0.8*1000);
+		$(".txt5").stop(true, true); // 애니메이션 모션없이 결과만 보여짐
+	}
 });
 </script>
 <style>
