--- a/ch9/jquery_effect_5_test.html
+++ b/ch9/jquery_effect_5_test.html
@@ -3,10 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title> 효과와 애니메이션 </title>  
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function() {
+	$(".txt1")
+   .animate({marginLeft:"100px"},1000)
+   .animate({marginLeft:"300px"},1000)
+   .animate({marginLeft:"400px"},1000);
 
+   $(".txt2")
+   .animate({marginLeft:"100px"},1000)
+   .animate({marginLeft:"300px"},1000)
+   .animate({marginLeft:"400px"},1000);
+   $(".txt2").clearQueue(); // 대기 상태에 있는 애니메이션을 날려버림
 });
 </script>
 <style>
