--- a/ch10/jquery_ajax_1_test.html
+++ b/ch10/jquery_ajax_1_test.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title> Ajax </title>
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function() {
+	// 외부 html에서 일부 요소만 불러와 지정된 요소에 삽입
+	$("#newsWrap_1").ㅊ("jquery_ajax_news.html #news_1");
 
+	$("#newsWrap_2").load("jquery_ajax_news.html #news_2");
 });
 </script>
 </head>
