--- a/ch10/jquery_ajax_2_test.html
+++ b/ch10/jquery_ajax_2_test.html
@@ -3,10 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title> Ajax </title>
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
-$(function() {
+// Ajax를 json 파일을 데이터 베이스에 요청하여 html 문단 태그와 결합하여 출력 -> 바인딩
+$(function () {
+    $.ajax({
+      url :  "../js/MOCK_DATA.json",
+      dataType : "json",
+      success:function(data) { // data = MOCK_DATA.json
+        if(data.length>0){ // null 값 방지
+          var tb = $("<table />"); // 테이블 태그 선언
+          for(var i in data) { // i -> index, 0~999
+            var $id = data[i].id; // 회원 기본 키
+            var $first_name = data[i].first_name; // 회원 성
+            var $last_name = data[i].last_name // 회원 이름
+            var $email = data[i].email // 회원 이메일
+            var $gender = data[i].gender // 회원 성별
 
+            var row = $("<tr />").append(
+              $("<td />").text($id),
+              $("<td />").text($first_name),
+              $("<td />").text($last_name),
+              $("<td />").text($email),
+              $("<td />").text($gender)
+            );
+            tb.append(row); // 테이블 태그에 <tr> 태그 넣기
+          }
+          $(".wrap").append(tb);
+        }
+      }
+    });
 });
 </script>
 </head>
