--- a/ch10/jquery_ajax_3_test.html
+++ b/ch10/jquery_ajax_3_test.html
@@ -3,11 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <title> Ajax </title>
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 <script>
 $(function() {
+    $.ajax({
+        url :  "../js/dataset.xml",
+        dataType : "xml",
+        success:function(data) { // data = dataset.xml
+            var $data = $(data).find("record"); // <record> 태그 찾기 -> record 객체 참조
+            if($data.length > 0){ 
+                var tb = $("<table />"); // 테이블 태그 선언
 
+                $.each($data, function(i,o) {
+                    var $id = $(o).find("id").text(); 
+                    var $first_name = $(o).find("first_name").text(); 
+                    var $last_name = $(o).find("last_name").text(); 
+                    var $email = $(o).find("email").text(); 
+                    var $gender = $(o).find("gender").text(); 
+
+                    var row = $("<tr />").append(
+                        $("<td />").text($id),
+                        $("<td />").text($first_name),
+                        $("<td />").text($last_name),
+                        $("<td />").text($email),
+                        $("<td />").text($gender)
+                    );
+
+                    tb.append(row); // 반복문 안에서 추가해야 함
+                });
+
+                $(".wrap").append(tb);
+            }
+        }
+    });
 });
+
 </script>
 </head>
 <body>
