--- a/ch11/jquery_plugin_1_test.html
+++ b/ch11/jquery_plugin_1_test.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title> Plugin </title>
-<script src="js/jquery.js"></script>
-<script src="js/jquery-ui.min.js"></script>
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-ui.min.js"></script>
 <style>
 	.layer_popup{
 		position: absolute;left: 50px; top: 50px;
@@ -13,13 +13,13 @@
 </style>
 <script>
 $(function() {
-
+	$(".layer_popup").draggable();
 });
 </script>
 </head>
 <body>
 <div class="layer_popup">
-	<img src="images/window_object_1.jpg" alt="">
+	<img src="../images/window_object_1.jpg" alt="">
 </div>
 </body>
 </html>
