--- a/ch11/jquery_plugin_2_test.html
+++ b/ch11/jquery_plugin_2_test.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title> Plugin </title>
-<script src="js/jquery.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="css/jquery-ui.min.css">
+<script src="../js/jquery.js"></script>
+<script src="../js/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="../css/jquery-ui.min.css">
 <script>
 $(function() {
-
+	$("#startDate").datepicker({minDate:+1,maxDate:"+1M"});
 });
 </script>
 </head>
