--- a/ch11/jquery_plugin_3_test.html
+++ b/ch11/jquery_plugin_3_test.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title> Plugin </title>
-		<script src="js/swiper-bundle.min.js"></script>
-		<link rel="stylesheet" href="css/swiper-bundle.min.css">
+		<script src="../js/swiper-bundle.min.js"></script>
+		<link rel="stylesheet" href="../css/swiper-bundle.min.css">
 		<style>
 			*{margin: 0;padding: 0;}
 			#gallery_wrap{ 
@@ -16,20 +16,51 @@
 		</style>
 		</head>
 <body>
-<div id="gallery_wrap">
-	<ul class="slide_gallery">
-		<li><img src="images/pic_1.jpg" alt="사진1"></li>
-		<li><img src="images/pic_2.jpg" alt="사진2"></li>
-		<li><img src="images/pic_3.jpg" alt="사진3"></li>
-		<li><img src="images/pic_4.jpg" alt="사진4"></li>
-		<li><img src="images/pic_5.jpg" alt="사진5"></li>
-		<li><img src="images/pic_6.jpg" alt="사진6"></li>
-		<li><img src="images/pic_7.jpg" alt="사진7"></li>
-		<li><img src="images/pic_8.jpg" alt="사진8"></li>
-	</ul>
+<div id="gallery_wrap" class="swiper">
+	<div class="swiper-wrapper">
+		<div class="swiper-slide"><img src="../images/pic_1.jpg" alt="사진1"></div>
+		<div class="swiper-slide"><img src="../images/pic_2.jpg" alt="사진2"></div>
+		<div class="swiper-slide"><img src="../images/pic_3.jpg" alt="사진3"></div>
+		<div class="swiper-slide"><img src="../images/pic_4.jpg" alt="사진4"></div>
+		<div class="swiper-slide"><img src="../images/pic_5.jpg" alt="사진5"></div>
+		<div class="swiper-slide"><img src="../images/pic_6.jpg" alt="사진6"></div>
+		<div class="swiper-slide"><img src="../images/pic_7.jpg" alt="사진7"></div>
+		<div class="swiper-slide"><img src="../images/pic_8.jpg" alt="사진8"></div>
+	</div>
+
+	<div class="swiper-pagination"></div>
+
+	<!-- 이전 다음 버튼 -->
+	<div class="swiper-button-prev"></div>
+	<div class="swiper-button-next"></div>
+
+	<!-- 스크롤바 위치 표시 -->
+	<div class="swiper-scrollbar"></div>
 </div>
+
 <script>
-  
+	const swiper = new Swiper('.swiper', {
+		//슬라이드의 방향과 반복 설정
+		direction: 'horizontal',
+		loop : true,
+
+		//인디게이터 설정
+		pagination : {
+			el : '.swiper-pagination'
+		},
+
+		//이전 다음 버튼 설정
+		navigation : {
+			nextEl : '.swiper-button-next',
+			prevEl : '.swiper-button-prev'
+		},
+
+		// 스크롤바 위치 표시 설정
+		scrollbar: {
+			el: '.swiper-scrollbar'
+		}
+	});
+
 </script>
 </body>
 </html>
